more examples links

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,4 +13,9 @@
 <button mat-button color="warn">Warn</button>
 <button mat-button disabled>Disabled</button>
 
-<h2>More redy material design components we can adopt: <a href="https://material.angular.io/components/button/examples">meterial design demo</a></h2>
+<h2>More redy material design components we can adopt: </h2>
+<ul>
+  <li><a href="https://material.angular.io/components/button/examples">Material Design Components Demo</a></li>
+  <li><a href="https://fontawesome.com/icons?d=gallery">Font Awesome Icons</a></li>
+  <li><a href="https://materialdesignicons.com/">Material Icons</a></li>
+</ul>
