--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -2,7 +2,7 @@
     
   <mat-toolbar color="primary" class="flex-horizontal">
 
-    <h2 class="header-text"><img class="header-image" src="..\..\assets\images\butterfly-2028592.svg"> {{ title }}</h2>
+    <h2 class="header-text"><img class="header-image" src="assets\images\butterfly-2028592.svg"> {{ title }}</h2>
     <!-- <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon class="mat-icon material-icons" role="img" aria-hidden="true">format_color_fill</mat-icon></button>
     <mat-menu #menu="matMenu">
       <mat-grid-list cols="2" rowHeight="2:2">
