--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,19 +1,35 @@
-<div class="mat-app-background basic-container flex-vertical">
-    
-  <mat-toolbar color="primary" class="flex-horizontal">
+<mat-toolbar color="primary" class="flex-horizontal flex-shrink-0">
+  <button mat-button class="flex-shrink-0"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</button>
+  <div class="flex-filler"></div>
+  <button mat-button class="flex-shrink-0">Nasze Motyle</button>
+  <button mat-button class="flex-shrink-0">Salut z Motyli</button>
+  <button mat-button class="flex-shrink-0">Mini Farma Motyli</button>
+  <button mat-button class="flex-shrink-0">Kontakt</button>
+</mat-toolbar>
 
-    <h2 class="header-text"><img class="header-image" src="assets\images\butterfly-2028592.svg"> {{ title }}</h2>
-    <!-- <button mat-icon-button [matMenuTriggerFor]="menu"><mat-icon class="mat-icon material-icons" role="img" aria-hidden="true">format_color_fill</mat-icon></button>
-    <mat-menu #menu="matMenu">
-      <mat-grid-list cols="2" rowHeight="2:2">
-          <mat-grid-tile><button mat-mini-fab class="dark-theme-select"  (click)="selectTheme('black-theme');"><mat-icon class="docs-theme-chosen-icon mat-icon material-icons ng-star-inserted" role="img" aria-hidden="true" *ngIf="componentCssClass === 'black-theme'" >check_circle</mat-icon></button></mat-grid-tile>
-          <mat-grid-tile><button mat-mini-fab class="light-theme-select" (click)="selectTheme('light-theme');"><mat-icon class="docs-theme-chosen-icon mat-icon material-icons ng-star-inserted" role="img" aria-hidden="true" *ngIf="componentCssClass === 'light-theme'" >check_circle</mat-icon></button></mat-grid-tile>
-      </mat-grid-list>
-    </mat-menu> -->
-    <div class="flex-filler"></div>
-    <!--<button mat-button routerLink="/login" *ngIf="!isLogged">go to Login</button>-->
-  </mat-toolbar>
-    
-<app-examples></app-examples>
 
-</div>
+<h2 style="background-color:yellow; flex:0;">carouselle</h2>
+
+<h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
+
+<h2 style="background-color:lightskyblue; flex:0;">towary</h2>
+
+<h2 style="background-color:lightpink; flex:0;">happy-feedback</h2>
+
+<!-- <app-examples></app-examples>  -->
+
+<div class="flex-filler"></div>
+<footer>
+  <div color="primary" class="flex-horizontal">
+    <p>Regulamin</p>
+    <p>Dostawa i Platność</p>
+    <p>Reklamacje</p>
+  </div>
+  <ul> TO DO List:
+    <li>instrukcja-heshtag-like</li>
+    <li>magnes-kontakt</li>
+    <li>FAQ</li>
+    <li>fb messenger</li>
+    <li>adaptive layout</li>
+  </ul>
+</footer>
