--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -1,7 +1,8 @@
-.header-text{
-
-}
 .header-image{
-    width: 44px;
-    height:44px;
+    width: 36px;
+    height:36px;
+}
+.mat-toolbar-row, .mat-toolbar-single-row {
+    height: auto;
+    padding: 0;
 }
