--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,17 +5,12 @@
 
 html, body {
   height: 100%;
+  margin: 0;
   user-select: none;
 }
 
-body {
-  margin: 0;
-  height: 100%;
-  display: flex;
-}
-
 .flex-vertical {
-    height: 100%;
+  height: 100%;
   display: flex;
   flex: 1;
   flex-direction: column;
@@ -31,5 +26,5 @@ body {
 }
 
 app-root {
-  width: 100%;
+  //width: 100%;
 }
