--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,35 +1,42 @@
-<mat-toolbar color="primary" class="flex-horizontal flex-shrink-0">
-  <button mat-button class="flex-shrink-0"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</button>
-  <div class="flex-filler"></div>
-  <button mat-button class="flex-shrink-0">Nasze Motyle</button>
-  <button mat-button class="flex-shrink-0">Salut z Motyli</button>
-  <button mat-button class="flex-shrink-0">Mini Farma Motyli</button>
-  <button mat-button class="flex-shrink-0">Kontakt</button>
-</mat-toolbar>
+<div class="flex-vertical" >
+  <mat-toolbar color="primary" class="flex-horizontal flex-shrink-0">
+    <button mat-button class="flex-shrink-0"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</button>
+    <div class="flex-filler"></div>
+    <button mat-button class="flex-shrink-0">Nasze Motyle</button>
+    <button mat-button class="flex-shrink-0">Salut z Motyli</button>
+    <button mat-button class="flex-shrink-0">Mini Farma Motyli</button>
+    <button mat-button class="flex-shrink-0">Kontakt</button>
+  </mat-toolbar>
 
+  <div class="flex-horizontal flex-shrink-0">
+    <div class="flex-filler"></div>
+      <div class="flex-vertical central-panel">
+        <app-carousel></app-carousel>
 
-<h2 style="background-color:yellow; flex:0;">carouselle</h2>
+        <h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
 
-<h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
+        <h2 style="background-color:lightskyblue; flex:0;">towary</h2>
 
-<h2 style="background-color:lightskyblue; flex:0;">towary</h2>
+        <h2 style="background-color:lightpink; flex:0;">happy-feedback</h2>
 
-<h2 style="background-color:lightpink; flex:0;">happy-feedback</h2>
-
-<!-- <app-examples></app-examples>  -->
-
-<div class="flex-filler"></div>
-<footer>
-  <div color="primary" class="flex-horizontal">
-    <p>Regulamin</p>
-    <p>Dostawa i Platność</p>
-    <p>Reklamacje</p>
+    </div>
+    <div class="flex-filler"></div>
   </div>
-  <ul> TO DO List:
-    <li>instrukcja-heshtag-like</li>
-    <li>magnes-kontakt</li>
-    <li>FAQ</li>
-    <li>fb messenger</li>
-    <li>adaptive layout</li>
-  </ul>
-</footer>
+  
+  <div class="flex-filler"></div>
+
+  <footer class="flex-shrink-0">
+    <div color="primary" class="flex-horizontal">
+      <p>Regulamin</p>
+      <p>Dostawa i Platność</p>
+      <p>Reklamacje</p>
+    </div>
+    <ul> TO DO List:
+      <li>instrukcja-heshtag-like</li>
+      <li>magnes-kontakt</li>
+      <li>FAQ</li>
+      <li>fb messenger</li>
+      <li>adaptive layout</li>
+    </ul>
+  </footer>
+</div>
