--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -16,4 +16,21 @@ mat-toolbar > button{
 
 .central-panel{
     max-width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 0;
 }
+
+//// If you want your image to be scaled differently (or add/override certain styles for more responsivenss) in different devices you need to use CSS media queries. Eg.
+// img {
+//     display: inline-block;
+//     width: 25%; // Show 4 images in a row normally
+//     height: auto;
+// }
+
+// @media (max-width: 600px) {
+//   img {
+//     width: 100%; // Override width to show only one image in a row on smaller screens
+//   }
+// }
