--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,4 +1,6 @@
-<app-carousel></app-carousel>
-<h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
-<h2 style="background-color:lightskyblue; flex:0;">towary</h2>
-<h2 style="background-color:lightpink; flex:0;">happy-feedback</h2>
+<div>
+    <app-carousel></app-carousel>
+    <h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
+    <h2 style="background-color:lightskyblue; flex:0;">towary</h2>
+    <h2 style="background-color:lightpink; flex:0;">happy-feedback</h2>
+</div>
