--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -2,21 +2,22 @@
   <mat-toolbar color="primary" class="flex-horizontal flex-shrink-0">
     <button mat-button class="flex-shrink-0" routerLink="/"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</button>
     <div class="flex-filler"></div>
-    <button mat-button class="flex-shrink-0" routerLink="/motyle">Nasze Motyle</button>
-    <button mat-button class="flex-shrink-0" routerLink="/salut">Salut z Motyli</button>
-    <button mat-button class="flex-shrink-0" routerLink="/farma">Mini Farma Motyli</button>
+    <button mat-button class="flex-shrink-0 mobile-hidden" routerLink="/motyle">Nasze Motyle</button>
+    <button mat-button class="flex-shrink-0 mobile-hidden" routerLink="/salut">Salut z Motyli</button>
+    <button mat-button class="flex-shrink-0 mobile-hidden" routerLink="/farma">Mini Farma Motyli</button>
     <button mat-button class="flex-shrink-0" routerLink="/kontakt">Kontakt</button>
+  </mat-toolbar>
+  <mat-toolbar color="primary" class="mobile-visible flex-horizontal flex-shrink-0">
+    <button mat-button routerLink="/motyle">Nasze Motyle</button>
+    <button mat-button routerLink="/salut">Salut z Motyli</button>
+    <button mat-button routerLink="/farma">Mini Farma Motyli</button>
   </mat-toolbar>
 
   <div class="flex-horizontal flex-shrink-0">
     <div class="flex-filler"></div>
-      <router-outlet class="central-panel"></router-outlet>
-      <!-- <div class="central-panel">
-        <app-carousel></app-carousel>
-        <h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
-        <h2 style="background-color:lightskyblue; flex:0;">towary</h2>
-        <h2 style="background-color:lightpink; flex:0;">happy-feedback</h2>
-      </div> -->
+    <div class="central-panel">
+      <router-outlet></router-outlet>
+    </div>
     <div class="flex-filler"></div>
   </div>
 
