--- a/src/app/components/motyle/motyle.component.html
+++ b/src/app/components/motyle/motyle.component.html
@@ -1,3 +1,7 @@
-<p>
-  motyle works!
-</p>
+<div>
+  <img class="header-image" src="assets\images\animal-158808_1280.png"/>
+  <img class="header-image" src="assets\images\animal-1297938_1280.png"/>
+  <img class="header-image" src="assets\images\butterfly-295030_1280.png"/>
+  <img class="header-image" src="assets\images\butterfly-1073707_640.png"/>
+  <img class="header-image" src="assets\images\butterfly-2028592.svg"/>
+</div>
