--- a/src/app/components/kontakt/kontakt.component.html
+++ b/src/app/components/kontakt/kontakt.component.html
@@ -7,7 +7,7 @@
   </ul>
 
   <p><i class="fab fa-facebook-messenger"></i> messenger: <a href="http://m.me/margaryta.e" target="_blank">Message on Facebook</a></p>
-  <p><i class="fab fa-telegram"></i> telegram: <a href="http://t.me/margaryta.e" target="_blank">Message margaryta.e on Telegram</a></p>
+  <p><i class="fab fa-telegram"></i> telegram: <a href="http://t.me/48535768070" target="_blank">Message margaryta.e on Telegram</a></p>
   <p><i class="fas fa-at"></i> mail: m.yevtuh@gmail.com</p>
   <p><i class="fas fa-mobile-alt"></i> tel.: 535-768 070 - Margaryta</p>
 </div>
