--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -12,22 +12,35 @@ mat-toolbar > button{
 }
 
 .central-panel{
-    max-width: 100%;
+    width:1200px; // default
+    max-width: 100%; // but no more 100%
     height: 100%;
     display: flex;
     flex-direction: column;
     flex-shrink: 0;
+
+    padding: 1.5rem;
 }
 
-
-/*desktop:*/
+//-----------------------big-desktop------------------------
 .mobile-hidden {
     display:block;
 }
 .mobile-visible {
     display:none;
 }
+.central-panel{
+    width:1200px; // default
+}
 
+//-----------------------medium-desktop------------------------
+@media only screen and (max-width: 1600px) {
+    .central-panel{
+        width:900px; // default
+    }
+}
+
+//-----------------------mobile device------------------------
 @media only screen and (max-width: 600px) {
     /* For mobile phones: */
     .mobile-hidden {
