--- a/src/app/components/kontakt-form/kontakt-form.component.scss
+++ b/src/app/components/kontakt-form/kontakt-form.component.scss
@@ -1,3 +1,8 @@
-.kontakt-form {
-    padding: 1.25rem;
+.input-margin {
+    margin: 0.75rem;
+}
+
+form{
+    border: 1px solid rgba(0,0,0,.125);
+    border-radius: .25rem;
 }
