--- a/src/app/components/kontakt/kontakt.component.html
+++ b/src/app/components/kontakt/kontakt.component.html
@@ -1,10 +1,23 @@
 <div>
-  <app-faq></app-faq>
+ <h5>Sprawdź częste pytania</h5>
+  <ngb-accordion>
+      <ngb-panel title="FAQ - Często zadawane pytania">
+        <ng-template ngbPanelContent>
 
-  <app-kontakt-form></app-kontakt-form>
+          <app-faq></app-faq>
 
+        </ng-template>
+      </ngb-panel>
+  </ngb-accordion>
+
+<h5 class='margin-top'>Formularż Kontaktowy</h5>
+<app-kontakt-form></app-kontakt-form>
+
+<h5 class='margin-top'>Skontaktuj się z nami</h5>
+<form class="kontakt-form">
   <p><i class="fab fa-facebook-messenger"></i> messenger: <a href="http://m.me/margaryta.e" target="_blank">Message on Facebook</a></p>
   <p><i class="fab fa-telegram"></i> telegram: <a href="http://t.me/48535768070" target="_blank">Message margaryta.e on Telegram</a></p>
   <p><i class="fas fa-at"></i> mail: m.yevtuh@gmail.com</p>
   <p><i class="fas fa-mobile-alt"></i> tel.: 535-768 070 - Margaryta</p>
+</form>
 </div>
