--- a/src/app/components/kontakt-form/kontakt-form.component.html
+++ b/src/app/components/kontakt-form/kontakt-form.component.html
@@ -31,6 +31,6 @@
       </div>
     </div>
   
-    <button class="input-margin" mat-button mat-stroked-button primary type="submit" [disabled]="!kontaktForm.form.valid">Wyślij Formularż</button>
+    <button class="input-margin btn btn-outline-primary" type="submit" [disabled]="!kontaktForm.form.valid">Wyślij Formularż</button>
   
 </form>
