--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<mat-card class="motyl-card">
+<!-- <mat-card class="motyl-card">
     <mat-card-header>
       <div mat-card-avatar></div>
       <mat-card-title>{{title}}</mat-card-title>
@@ -10,8 +10,6 @@
         {{text}}
       </p>
     </mat-card-content>
-    <!-- <mat-card-actions>
-      <button mat-button>LIKE</button>
-      <button mat-button>SHARE</button>
-    </mat-card-actions> -->
-  </mat-card>
+  </mat-card> -->
+
+  <p>card works!</p>
