--- a/src/app/components/page-not-found/page-not-found.component.html
+++ b/src/app/components/page-not-found/page-not-found.component.html
@@ -4,14 +4,14 @@
   
     <div class="flex-horizontal flex-0">
       <div class="flex-filler"></div>
-      <i class="material-icons">warning</i>
+      <i class="fas fa-exclamation-triangle"></i>
       <p>404 page-not-found!</p>
       <div class="flex-filler"></div>
     </div>
   
     <div class="flex-horizontal flex-0">
       <div class="flex-filler"></div>
-      <button mat-button routerLink="/">Go To Home Page</button>
+      <button class="btn btn-lg btn-outline-primary" routerLink="/">Go To Home Page</button>
       <div class="flex-filler"></div>
     </div>
   
