header max width and ellipsis

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -1,7 +1,7 @@
-<div class="flex-vertical" >
-  <header class="navbar flex-shrink-0">
-    <div class="flex-vertical" >
-      <div class="flex-horizontal flex-filler flex-shrink-0" >
+<div class="flex-vertical max-width-100-proc" >
+  <header class="navbar flex-shrink-0 max-width-100-proc">
+    <div class="flex-vertical max-width-100-proc" >
+      <div class="flex-horizontal flex-filler max-width-100-proc" >
         <a  class="btn flex-shrink-0" routerLink="/"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</a>
         <div class="flex-filler"></div>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/motyle">Nasze Motyle</a>
@@ -9,15 +9,15 @@
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/farma">Mini Farma Motyli</a>
         <a class="btn flex-shrink-0" routerLink="/kontakt">Kontakt</a>
       </div>
-      <div class="mobile-visible-flex flex-horizontal flex-filler flex-shrink-0">
+      <div class="mobile-visible-flex flex-horizontal flex-filler max-width-100-proc">
         <a class="btn flex-filler" routerLink="/motyle">Nasze Motyle</a>
         <a class="btn flex-filler" routerLink="/salut">Salut z Motyli</a>
-        <a class="btn flex-filler flex-shrink-0" routerLink="/farma">Mini Farma Motyli</a>
+        <a class="btn flex-filler" routerLink="/farma">Mini Farma Motyli</a>
       </div>
     </div>
   </header>  
 
-  <div class="flex-horizontal flex-shrink-0">
+  <div class="flex-horizontal flex-shrink-0 max-width-100-proc">
     <div class="flex-filler"></div>
     <div class="central-panel">
       <router-outlet></router-outlet>
