--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -4,6 +4,9 @@ header.navbar {
     a{
         height:100%;
         color: #fff;
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
     a:hover{
         color: rgba(255,255,255,.5);
@@ -11,6 +14,9 @@ header.navbar {
     .btn{
         padding:0.75rem;
     }
+}
+.max-width-100-proc{
+    max-width: 100%;
 }
 
 .header-image{
