--- a/src/app/components/faq/faq.component.scss
+++ b/src/app/components/faq/faq.component.scss
@@ -1,6 +1,6 @@
-// div.card-body {
-//     padding: 0.25rem;
+// p.text {
+//     margin: 0;
 // }
-// div.card-header {
-//     padding: 0.25rem 1.25rem;
+// .card-body {
+//     padding: 1rem 2rem;
 // }
