--- a/src/app/components/kontakt/kontakt.component.html
+++ b/src/app/components/kontakt/kontakt.component.html
@@ -3,7 +3,7 @@
   <ngb-accordion #acc="ngbAccordion">
       <ngb-panel id="acc-header-panel"><!-- title="FAQ - Często zadawane pytania" -->
         <ng-template ngbPanelTitle> 
-          <p style="margin:0;"><i style="margin-right: 0.5rem;" class="fas" [class.fa-caret-right]="acc.activeIds != 'acc-header-panel'" [class.fa-caret-down]="acc.activeIds == 'acc-header-panel'"></i>FAQ - Często zadawane pytania"</p>
+          <p style="margin:0;"><i style="margin-right: 0.5rem;" class="fas" [class.fa-caret-right]="acc.activeIds != 'acc-header-panel'" [class.fa-caret-down]="acc.activeIds == 'acc-header-panel'"></i>FAQ - Często zadawane pytania</p>
         </ng-template> 
 
         <ng-template ngbPanelContent>
