--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,15 +1,13 @@
-<!-- <mat-card class="motyl-card">
-    <mat-card-header>
-      <div mat-card-avatar></div>
-      <mat-card-title>{{title}}</mat-card-title>
-      <mat-card-subtitle>{{subtitle}}</mat-card-subtitle>
-    </mat-card-header>
-    <img mat-card-image [src]="image" alt="Zdięcie motylia">
-    <mat-card-content>
+<div class="motyl-card">
+    <div class="header">
+      <!-- <div mat-card-avatar></div> -->
+      <div class="title">{{title}}</div>
+      <div class="subtitle">{{subtitle}}</div>
+    </div>
+    <img [src]="image" alt="Zdięcie motylia">
+    <div>
       <p>
         {{text}}
       </p>
-    </mat-card-content>
-  </mat-card> -->
-
-  <p>card works!</p>
+    </div>
+</div>
