--- a/src/app/components/faq/faq.component.html
+++ b/src/app/components/faq/faq.component.html
@@ -1,7 +1,10 @@
-<ngb-accordion [closeOthers]="true">
-  <ngb-panel ngbSlide *ngFor="let faq of FAQs; let index = index" id="static-{{index}}" [title]="faq.header">
+<ngb-accordion [closeOthers]="true" #acc="ngbAccordion">
+  <ngb-panel ngbSlide *ngFor="let faq of FAQs; let index = index" id="static-{{index}}" >
+      <ng-template ngbPanelTitle> 
+        <p style="margin:0;"><i style="margin-right: 0.5rem;" class="fas" [class.fa-caret-right]="acc.activeIds != 'static-'+index" [class.fa-caret-down]="acc.activeIds == 'static-'+index"></i>{{faq.header}}</p>
+      </ng-template> 
     <ng-template ngbPanelContent>
-      <p>{{faq.text}}</p>
+      <p class="text">{{faq.text}}</p>
       <h6 *ngIf="faq.router">Wiencej czytaj w <a [routerLink]="faq.router.link">{{faq.router.text}}</a></h6>
     </ng-template>
   </ngb-panel>
