header larger image

--- a/src/app/components/app.component.html
+++ b/src/app/components/app.component.html
@@ -2,7 +2,7 @@
   <header class="navbar flex-shrink-0 max-width-100-proc">
     <div class="flex-vertical max-width-100-proc" >
       <div class="flex-horizontal flex-filler max-width-100-proc" >
-        <a  class="btn flex-shrink-0" routerLink="/"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</a>
+        <a  class="btn flex-shrink-0 home-navigation" routerLink="/"><img class="header-image" src="assets\images\butterfly-2028592.svg"/>Motyli.pl</a>
         <div class="flex-filler"></div>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/motyle">Nasze Motyle</a>
         <a class="btn flex-shrink-0 mobile-hidden" routerLink="/salut">Salut z Motyli</a>
