--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -14,16 +14,20 @@ header.navbar {
     .btn{
         padding:0.75rem;
     }
+    .home-navigation.btn{
+        padding:0.3rem 0.5rem 0.2rem 0.5rem;
+        font-size: larger;
+    }
+    .header-image{
+        max-width: 40px;
+        max-height: 40px;
+        margin-right:0.5rem;
+    }
 }
 .max-width-100-proc{
     max-width: 100%;
 }
 
-.header-image{
-    max-width: 24px;
-    max-height:24px;
-    margin-right:0.5rem;
-}
 
 div.toolbar > button{
     height: 100%;
