--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,12 +1,21 @@
 <footer class="flex-shrink-0 flex-filler">
-    <ul>
-      <li><a routerLink="/regulamin">Regulamin</a></li>
-      <li><a routerLink="/platnosc">Dostawa i Platność</a></li>
-      <li><a routerLink="/reklamacje">Reklamacje</a></li>
-      <li><a routerLink="/FAQ">FAQ</a></li>
-
-      <li>instrukcja-heshtag-like</li>
-      <li>magnes-kontakt</li>
-      <li>fb messenger</li>
-    </ul>
-  </footer>
+  <div class="flex-filler"></div>
+  <div class="header">MENU —
+   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/motyle">Katalog motyli tropikalnych</a>  <div class="flex-filler"></div></div>
+   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/salut">Salut z motyli</a><div class="flex-filler"></div></div>
+   <div> <div class="flex-filler"></div> <a class="btn" routerLink="/farma">Mini farma motyli</a><div class="flex-filler"></div></div>
+  </div>
+  <div class="flex-filler"></div>
+  <div class="header">O NAS —
+    <a class="btn" routerLink="/platnosc">Dostawa i platność</a>
+    <a class="btn" routerLink="/FAQ">FAQ - częste pytania</a>
+    <a class="btn" routerLink="/regulamin">Regulamin</a>
+    <a class="btn" routerLink="/kontakt">Kontakt</a>
+  </div>
+  <div class="flex-filler"></div>
+  <div class="header">DOLĄCZ DO NAS —
+    <a class="btn">FB</a>
+    <a class="btn">Insta</a>
+  </div>
+  <div class="flex-filler"></div>
+</footer>
