--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,23 +1,45 @@
 <div>
     <app-carousel></app-carousel>
-    <h2 style="background-color:lightcyan; flex:0;">pomysł na prezent</h2>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <div class=adaptive-card>Pomyst la wesele</div>
-    <h2 style="background-color:lightskyblue; flex:0;">towary</h2>
-    <!-- <h2 style="background-color:lightpink; flex:0;">happy-feedback</h2> -->
+    <h3 class="centered">Pomysł na prezent</h3>
+
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/1.jpg"/>
+        <p class="centered text-larger">Pomysł na wesele</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/2.jpg"/>
+        <p class="centered text-larger">Prezent na urodziny</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>
+   
+    <h3 class="centered" style="flex:0;">Towary</h3>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>
+    
+    <!-- <h2 style="b
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/small/3.jpg"/>
+        <p class="centered text-larger">Pomyst la wesele</p>
+    </div>ackground-color:lightpink; flex:0;">happy-feedback</h2> -->
 </div>
