catalog, contact and images update

--- a/src/app/components/kontakt/kontakt.component.html
+++ b/src/app/components/kontakt/kontakt.component.html
@@ -18,8 +18,8 @@
 <h5 class='margin-top'>Skontaktuj się z nami</h5>
 <form class="kontakt-form">
   <div class="flex-column">
-    <a class="btn btn-outline-primary" href="http://m.me/margaryta.e" ><i class="fab fa-facebook-messenger"></i>Facebook messenger</a>
-    <a class="btn btn-outline-primary"><i class="fas fa-at"></i>m.yevtuh@gmail.com</a>
+    <a class="btn btn-outline-primary" href="http://m.me/margaryta.e" ><i class="fab fa-facebook-messenger"></i>fb messenger: margaryta.e</a>
+    <a class="btn btn-outline-primary" href="mailto:m.yevtuh@gmail.com"><i class="fas fa-at"></i>m.yevtuh@gmail.com</a>
     <a class="btn btn-outline-primary"><i class="fas fa-mobile-alt"></i>+48 535-768-070</a>
   </div> 
   <div class="flex-filler"></div>
