--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,43 +3,43 @@
     <h3 class="centered">Pomysł na prezent</h3>
 
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/1.jpg"/>
+        <img class="card-image" src="assets/images/pomysl/1.svg"/>
         <p class="centered text-larger">Pomysł na wesele</p>
     </div>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/2.jpg"/>
+        <img class="card-image" src="assets/images/pomysl/2.svg"/>
         <p class="centered text-larger">Prezent na urodziny</p>
     </div>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/3.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/4.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/5.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/6.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/7.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>
    
     <h3 class="centered" style="flex:0;">Towary</h3>
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/8.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>
     
     <!-- <h2 style="b
     <div class=adaptive-card>
-        <img class="card-image" src="assets/images/small/3.jpg"/>
-        <p class="centered text-larger">Pomyst la wesele</p>
+        <img class="card-image" src="assets/images/pomysl/3.svg"/>
+        <p class="centered text-larger">X-X-X</p>
     </div>ackground-color:lightpink; flex:0;">happy-feedback</h2> -->
 </div>
