mini-farma text

--- a/src/app/components/farma/farma.component.html
+++ b/src/app/components/farma/farma.component.html
@@ -1,3 +1,33 @@
 <div>
-  farma works!
+  <h3>Farma motyli</h3>
+  <p>Domowa farma motyli będzie wspaniałym prezentem dla dziecka. Obserwując metamorfozę motyla, dziecko uczy się przyrody i otrzymuje niezapomniane wrażenia. Motyle tropikalne  są bardzo duże i kolorowe, takie jakich nie znajdziesz w naszych szerokościach geograficznych.
+  </p><p>W końcu możesz na własne oczy przekonać się, jak powstaje najpiękniejsza i zwiewna kreacja natury, ponieważ motyl, rodzi się z nieruchomej poczwarki. Twoje dociekliwe dziecko będzie obserwować życie motyla w domu. Motyl i domowa farma motyli - stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych. Motyle, wyhodowane w domu, nie boją się człowieka i mogą być trzymane w rękach, a nawet karmione.
+  </p><p>Motyle są świetnym zwierzakiem domowym, ponieważ nie zajmują dużo miejsca i nie wywołują alergii. Nowonarodzone motyle żyją od kilku dni do kilku tygodni. Oczekiwana długość życia zależy od charakteru i starannej opieki.
+  </p><p>Motyle najlepiej karmić raz dziennie rano, karmienie zajmuje zaledwie parę minut. Do karmienia motyli nadaje się soczysta pomarańcza lub inne soczyste owoce. Jeśli zapomnisz karmić motyla to on będzie żył tylko do dwu dni.
+  </p><p>Mini-farma motyli zawiera dom motyla, zestaw poczwarek i instrukcję.
+  </p>
+  <h5>Instrukcja dla mini-farmy</h5>
+  <p>Dokładne przestrzeganie instrukcji zwiększy procent przeżywalności motyli.
+  </p>
+  <ol>
+    <li>Stwórz warunki do życia. Otwórz słoik i włóż do niego kamienie. Wlej wodę maksymalne do poziomu 3/4 kamieni (około 1 cm). Zapewni to wilgoć dla motyli. Idealna wilgotność dla motyli do 80-90%. Aby to zrobić, wewnątrz motyla 2-3 razy dziennie, należy wstrzyknąć wodę ze zraszacza do kwiatów i wlać wodę na dno domku motyla.</li>
+    <li>Zawieś poczwarki: wyjąć poczwarki z pudełka i zapiąć na patyku w zaznaczonych miejscach. Pod motylem musi zostać minimum 15 cm.</li>
+    <li>Zamknij słoik z pokrywką i umieść w ciepłym, jasnym miejscu.</li>
+    <li>Nie należy umieszczać  mini-farmę na słońcu lub przy oknie, bezpośrednie światło słoneczne może przegrzać poczwarki. Idealna temperatura w pomieszczeniu wynosi 23-27 stopni.</li>
+    <li>Czekamy na pojawienie się motyli. Dojrzewanie poczwarek w motywie trwa do 5 dni. Kiedy motyl jest gotowy do narodzin, poczwarka ściemnieje. Patrz uważnie! Pojawienie się motyla następuje w ciągu kilku sekund. Pamiętaj, że nawet w naturze nie każda poczwarka będzie miała pełnoprawnego motyla - normalna płodność wynosi 50-80%.</li>
+    <li>Nie spiesz się, aby uwolnić motyla. Po urodzeniu motyl wysusza skrzydła - może to potrwać do godziny.</li>
+    <li>Ostrożnie otwórz słoik i uwolnij nowonarodzonego motyla na wolność, aby nie uszkodził skrzydeł w słoiku.</li>
+    <li>Opiekuj się motylem. Opryskując jego skrzydła wodą z pistoletu natryskowego z odległości 1 metra i raz dziennie, karm motyla. Film, w jaki sposób nakarmić motyla, jest dostępny pod linkiem. Jednak nie za każdym razem, motyl będzie chciał jeść, pamiętaj, że ma on też swój niepowtarzalny charakter.</li>
+    <li>Wraz z nadejściem ciemności motyl staje się mniej aktywny (z wyjątkiem gatunków nocnych), zalecamy schować go w pudełku, aby nie zgubić go do rana.</li>
+    <li>Życie tropikalnego motyla trwa od 2 do 7 dni. To zależy od warunków hodowli i tego, jak uporządkowała go przyroda.</li>
+    <li>Podziel się radością narodzin motyla, dodaj tag <strong>#motyli.pl</strong></li>
+  </ol>
+
+  <h5>Czego nie robić:</h5> 
+  <ul>
+    <li>nie wkładać poczwarek motyli do lodówki, motyl tropikalny nie znosi temperatur poniżej 18 stopni.</li>
+    <li>nie wystawiać motyla na słońce.</li>
+    <li>nie wypuszczać motyli na łono przyrody.</li>
+  </ul>
+
 </div>
