add faq and edit layouts

--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -7,8 +7,8 @@
   </div>
   <div class="flex-filler"></div>
   <div class="header">O NAS —
-    <a class="btn" routerLink="/platnosc">Dostawa i platność</a>
-    <a class="btn" routerLink="/FAQ">FAQ - częste pytania</a>
+    <a class="btn" routerLink="/dostawa">Dostawa i platność</a>
+    <a class="btn" routerLink="/faq">FAQ - częste pytania</a>
     <a class="btn" routerLink="/regulamin">Regulamin</a>
     <a class="btn" routerLink="/kontakt">Kontakt</a>
   </div>
