--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -4,7 +4,7 @@
 
     <div class=adaptive-card>
         <img class="card-image" src="assets/images/pomysl/1.svg"/>
-        <p class="centered text-larger">Pomysł na wesele</p>
+        <p class="centered text-larger">Oryginalny prezent</p>
     </div>
     <div class=adaptive-card>
         <img class="card-image" src="assets/images/pomysl/2.svg"/>
@@ -12,29 +12,35 @@
     </div>
     <div class=adaptive-card>
         <img class="card-image" src="assets/images/pomysl/3.svg"/>
-        <p class="centered text-larger">X-X-X</p>
+        <p class="centered text-larger">Prezent dla mamy</p>
     </div>
     <div class=adaptive-card>
         <img class="card-image" src="assets/images/pomysl/4.svg"/>
-        <p class="centered text-larger">X-X-X</p>
-    </div>
-    <div class=adaptive-card>
-        <img class="card-image" src="assets/images/pomysl/5.svg"/>
-        <p class="centered text-larger">X-X-X</p>
-    </div>
-    <div class=adaptive-card>
-        <img class="card-image" src="assets/images/pomysl/6.svg"/>
-        <p class="centered text-larger">X-X-X</p>
+        <p class="centered text-larger">Prezent na wesele</p>
     </div>
     <div class=adaptive-card>
         <img class="card-image" src="assets/images/pomysl/7.svg"/>
-        <p class="centered text-larger">X-X-X</p>
+        <p class="centered text-larger">Walentynki</p>
     </div>
-   
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/pomysl/6.svg"/>
+        <p class="centered text-larger">Wyjątkowy prezent</p>
+    </div>
+    
     <h3 class="centered" style="flex:0;">Towary</h3>
+    <!-- <app-card class="adaptive-card" [title]="card.title"  [subtitle]="card.subtitle" [text]="card.text" [image]="card.image"></app-card> -->
+
     <div class=adaptive-card>
         <img class="card-image" src="assets/images/pomysl/8.svg"/>
-        <p class="centered text-larger">X-X-X</p>
+        <p class="centered text-larger">Katalog</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/pomysl/8.svg"/>
+        <p class="centered text-larger">Salwy</p>
+    </div>
+    <div class=adaptive-card>
+        <img class="card-image" src="assets/images/pomysl/8.svg"/>
+        <p class="centered text-larger">Farma</p>
     </div>
     
     <!-- <h2 style="b
