--- a/src/app/components/app.component.scss
+++ b/src/app/components/app.component.scss
@@ -43,6 +43,9 @@ div.toolbar > button{
 
     padding: 1.5rem;
 }
+.hand-poiner{
+    cursor: pointer;
+}
 
 //-----------------------big-desktop------------------------
 .mobile-hidden {
@@ -56,7 +59,7 @@ div.toolbar > button{
 }
 
 //-----------------------medium-desktop------------------------
-@media only screen and (max-width: 1600px) {
+@media only screen and (max-width: 1800px) {
     .central-panel{
         width:900px; // default
     }
