--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -1,7 +1,6 @@
 .motyl-card{
     margin:0.5rem;
-    box-shadow: 0 3px 1px -2px rgba(0,0,0,.2), 0 2px 2px 0 rgba(0,0,0,.14), 0 1px 5px 0 rgba(0,0,0,.12);
-    display: block;
+    box-shadow: 0 1px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 1px 0 rgba(0, 0, 0, 0.12);display: block;
     position: relative;
     padding: 24px;
     border-radius: 2px;
@@ -10,9 +9,9 @@ img{
     width:100%;
     height: auto;
 }
-.subtitle{
-    
+.subtitle{    
     color: rgba(0,0,0,.54);
+    margin-bottom: 0.3rem;
 }
 
 .title{
