--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -30,17 +30,22 @@
     <h3 class="centered" style="flex:0;">Towary</h3>
     <!-- <app-card class="adaptive-card" [title]="card.title"  [subtitle]="card.subtitle" [text]="card.text" [image]="card.image"></app-card> -->
 
-    <div class=adaptive-card>
+    <div class="adaptive-card hand-poiner"  routerLink="/motyle">
         <img class="card-image" src="assets/images/pomysl/8.svg"/>
         <p class="centered text-larger">Katalog</p>
+        <p class="centered text-larger">Opis ??</p>
     </div>
-    <div class=adaptive-card>
+    <div class="adaptive-card hand-poiner"  routerLink="/salut">
         <img class="card-image" src="assets/images/pomysl/8.svg"/>
         <p class="centered text-larger">Salwy</p>
+        <p class="centered text-larger">Opis ??</p>
+
     </div>
-    <div class=adaptive-card>
+    <div class="adaptive-card hand-poiner"  routerLink="/farma">
         <img class="card-image" src="assets/images/pomysl/8.svg"/>
         <p class="centered text-larger">Farma</p>
+        <p class="centered text-larger">Opis ??</p>
+
     </div>
     
     <!-- <h2 style="b
