--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -30,27 +30,14 @@
     <h3 class="centered" style="flex:0;">Towary</h3>
     <!-- <app-card class="adaptive-card" [title]="card.title"  [subtitle]="card.subtitle" [text]="card.text" [image]="card.image"></app-card> -->
 
-    <div class="adaptive-card hand-poiner"  routerLink="/motyle">
-        <img class="card-image" src="assets/images/pomysl/8.svg"/>
+
+    <app-card class="adaptive-card hand-poiner" routerLink="/motyle" title="Katalog"  text="Motyl tropikalny - najbardziej pamiętna niespodzianka na każdą uroczystość." image="assets/images/towary1-640x426.jpg"></app-card>
+    <app-card class="adaptive-card hand-poiner" routerLink="/salut" title="Salwy"  text="Salwy z najpiękniejszych motyli na świecie: Morfy, Rumieniec, Calygos pozostawią niezatarte wrażenie na całe życie." image="assets/images/towary2-640x426.jpg"></app-card>
+    <app-card class="adaptive-card hand-poiner" routerLink="/farma" title="Farma"  text="Domowa farma motyli stanie się ciekawą zabawką edukacyjną nie tylko dla dzieci, ale także dla dorosłych." image="assets/images/towary3-640x426.jpg"></app-card>
+    <!--     <div class="adaptive-card hand-poiner"  routerLink="/motyle">
+        <img class="card-image" src="assets/images/towary1-640x426.jpg"/>
         <p class="centered text-larger">Katalog</p>
-        <p class="centered text-larger">Opis ??</p>
-    </div>
-    <div class="adaptive-card hand-poiner"  routerLink="/salut">
-        <img class="card-image" src="assets/images/pomysl/8.svg"/>
-        <p class="centered text-larger">Salwy</p>
-        <p class="centered text-larger">Opis ??</p>
+        <p class="centered text-larger">Motyl tropikalny - najbardziej pamiętna niespodzianka na każdą uroczystość.</p>     
+    </div>-->
 
-    </div>
-    <div class="adaptive-card hand-poiner"  routerLink="/farma">
-        <img class="card-image" src="assets/images/pomysl/8.svg"/>
-        <p class="centered text-larger">Farma</p>
-        <p class="centered text-larger">Opis ??</p>
-
-    </div>
-    
-    <!-- <h2 style="b
-    <div class=adaptive-card>
-        <img class="card-image" src="assets/images/pomysl/3.svg"/>
-        <p class="centered text-larger">X-X-X</p>
-    </div>ackground-color:lightpink; flex:0;">happy-feedback</h2> -->
 </div>
